--- a/fediz-core/pom.xml
+++ b/fediz-core/pom.xml
@@ -39,6 +39,13 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+                <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+
    </dependencies>
 
    <build>
