Updating to CXF 2.5.3 + WSS4J 1.6.5
git-svn-id: https://svn.apache.org/repos/asf/cxf/sandbox/fediz@1329610 13f79535-47bb-0310-9956-ffa450edef68

--- a/fediz-core/pom.xml
+++ b/fediz-core/pom.xml
@@ -25,7 +25,7 @@
    		<dependency>
    			<groupId>org.apache.ws.security</groupId>
    			<artifactId>wss4j</artifactId>
-   			<version>1.6.2</version>
+   			<version>${wss4j.version}</version>
    			<scope>compile</scope>
    		</dependency>
      	<dependency>
