[CXF-4264] Applied fix from Juerg. Thanks. Some minor fixes and refactoring
git-svn-id: https://svn.apache.org/repos/asf/cxf/sandbox/fediz@1329945 13f79535-47bb-0310-9956-ffa450edef68

--- a/fediz-idp/src/main/webapp/WEB-INF/web.xml
+++ b/fediz-idp/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,13 @@
 		<init-param>
 			<param-name>sts.wsdl.endpoint</param-name>
 			<param-value>TransportUT_Port</param-value>
-		</init-param>				
+		</init-param>
+<!--		
+		<init-param>
+			<param-name>ws-trust-tokentype</param-name>
+			<param-value>http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1</param-value>
+		</init-param>
+-->		
 	</servlet>
 
 	<servlet-mapping>
