--- a/examples/wsclientWebapp/webservice/pom.xml
+++ b/examples/wsclientWebapp/webservice/pom.xml
@@ -9,7 +9,7 @@
        <version>0.6-SNAPSHOT</version>
     </parent>
     <artifactId>webservice</artifactId>
-    <name>WS-Federation web service</name>
+    <name>wsclientwebapp - web service</name>
     <version>0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
