--- a/plugin/core/pom.xml
+++ b/plugin/core/pom.xml
@@ -8,7 +8,7 @@
        <version>0.6-SNAPSHOT</version>
    </parent>
    <artifactId>fediz-core</artifactId>
-   <name>WS Federation Core</name>
+   <name>Fediz Core</name>
    <packaging>jar</packaging>
 
     <properties>
