--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -9,7 +9,7 @@
        <version>0.6-SNAPSHOT</version>
     </parent>
     <artifactId>fediz-idp-sts</artifactId>
-    <name>WS Federation IDP STS</name>
+    <name>Fediz STS</name>
     <packaging>war</packaging>
 
    <properties>
