missing pom added, minor changes
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1332138 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugin/core/pom.xml
+++ b/plugin/core/pom.xml
@@ -8,7 +8,7 @@
        <version>0.6-SNAPSHOT</version>
    </parent>
    <artifactId>fediz-core</artifactId>
-   <name>Fediz Core</name>
+   <name>Apache Fediz Plugin Core</name>
    <packaging>jar</packaging>
 
     <properties>
