--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3.2</version>
             <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
+               <source>${jdk.version}</source>
+               <target>${jdk.version}</target>
             </configuration>
          </plugin>
          <plugin>
@@ -44,7 +44,7 @@
                     <linkXRef>false</linkXRef>
                     <failOnViolation>true</failOnViolation>
                     <verbose>true</verbose>
-                    <targetJdk>1.6</targetJdk>
+                    <targetJdk>${jdk.version}</targetJdk>
                 </configuration>
                 <executions>
                     <execution>
@@ -81,6 +81,7 @@
       <cxf.version>2.5.3</cxf.version>
       <wss4j.version>1.6.5</wss4j.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jdk.version>1.6</jdk.version>
    </properties>
 
    <dependencies>
