--- a/examples/wsclientWebapp/pom.xml
+++ b/examples/wsclientWebapp/pom.xml
@@ -5,8 +5,9 @@
    <modelVersion>4.0.0</modelVersion>
     <parent>
        <groupId>org.apache.cxf.fediz</groupId>
-       <artifactId>fediz</artifactId>
+       <artifactId>fediz-parent</artifactId>
        <version>0.6-SNAPSHOT</version>
+       <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>wsclientWebapp</artifactId>
