--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
        <groupId>org.apache.cxf.fediz.examples</groupId>
-       <artifactId>fediz-examples</artifactId>
+       <artifactId>wsclientWebapp</artifactId>
        <version>0.6-SNAPSHOT</version>
     </parent>
     <artifactId>webapp</artifactId>
