--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,255 @@
    <name>Fediz</name>
    <packaging>pom</packaging>
 
+   <properties>
+      <slf4j.version>1.6.1</slf4j.version>
+      <tomcat.version>7.0.21</tomcat.version>
+      <junit.version>4.8.2</junit.version>
+      <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
+      <cxf.version>2.5.3</cxf.version>
+      <wss4j.version>1.6.5</wss4j.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jdk.version>1.6</jdk.version>
+      <compiler.fork>false</compiler.fork>
+      <cxf.build-utils.version>2.4.1</cxf.build-utils.version>
+   </properties>
+
    <modules>
+      <module>parent</module>
       <module>plugins</module>
       <module>services</module>
       <module>examples</module>
    </modules>
 
+    <build>
+        <defaultGoal>install</defaultGoal>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>properties-maven-plugin </artifactId>
+                    <version>1.0-alpha-2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.7</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>xmlbeans-maven-plugin</artifactId>
+                    <version>2.3.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.7</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.4.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.3.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <configuration>
+                        <tagBase>https://svn.apache.org/repos/asf/fediz/tags</tagBase>
+                        <useReleaseProfile>false</useReleaseProfile>
+                        <preparationGoals>clean install</preparationGoals>
+                        <goals>deploy</goals>
+                        <arguments>-Prelease,deploy</arguments>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.8</version>
+                    <configuration>
+                        <attach>true</attach>
+                        <source>1.5</source>
+                        <quiet>true</quiet>
+                        <bottom>Apache Fediz</bottom>
+                        <javadocVersion>1.5</javadocVersion>
+                        <encoding>UTF-8</encoding>
+                        <detectOfflineLinks>false</detectOfflineLinks>
+                        <notimestamp>true</notimestamp>
+                        <!--subpackages>org.apache.cxf</subpackages-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.5</source>
+                        <target>1.5</target>
+                        <maxmem>256M</maxmem>
+                        <fork>${cxf.compiler.fork}</fork>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.6</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>ant-contrib</groupId>
+                            <artifactId>ant-contrib</artifactId>
+                            <version>1.0b3</version>
+                            <exclusions>
+                                <exclusion>
+                                    <groupId>ant</groupId>
+                                    <artifactId>ant</artifactId>
+                                </exclusion>
+                            </exclusions>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.apache.ant</groupId>
+                            <artifactId>ant-trax</artifactId>
+                            <version>1.8.0</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.apache.ant</groupId>
+                            <artifactId>ant-nodeps</artifactId>
+                            <version>1.8.1</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.3</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>1.5</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.cxf.build-utils</groupId>
+                            <artifactId>cxf-buildtools</artifactId>
+                            <version>${cxf.build-utils.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>2.12</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>2.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-eclipse-plugin</artifactId>
+                    <version>2.8</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.cxf.build-utils</groupId>
+                            <artifactId>cxf-buildtools</artifactId>
+                            <version>${cxf.build-utils.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+<!-- TODO
+                <plugin>
+                  <groupId>org.apache.rat</groupId>
+                  <artifactId>apache-rat-plugin</artifactId>
+                  <version>0.7</version>
+                  <configuration>
+                      <numUnapprovedLicenses>350</numUnapprovedLicenses>
+                      <excludeSubProjects>false</excludeSubProjects>
+                      <excludes>
+                          <exclude>.git/**</exclude>
+                          <exclude>.gitignore</exclude>
+                          <exclude>velocity.log</exclude>
+                          <exclude>**/target/**</exclude>
+                          <exclude>distribution/**</exclude>
+                          <exclude>**/jaxb.index</exclude>
+                          <exclude>**/META-INF/MANIFEST</exclude>
+                          <exclude>**/src/test/**/*.txt</exclude>
+                          <exclude>**/.classpath</exclude>
+                          <exclude>**/.settings/**/*</exclude>
+                          <exclude>**/.project</exclude>
+                      </excludes>
+                  </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.0</version>
+                    <configuration>
+                        <chmod>true</chmod>
+                        <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                        <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                        <stagingRepositoryId>apache.cxf.site</stagingRepositoryId>
+                        <stagingSiteURL>scp://people.apache.org/www/cxf.apache.org/maven-site-${project.version}</stagingSiteURL>
+                    </configuration>
+		    <dependencies>
+		      <dependency>
+			<groupId>org.apache.maven.wagon</groupId>
+			<artifactId>wagon-ssh</artifactId>
+			<version>2.1</version>
+		      </dependency>
+		    </dependencies>
+                </plugin>
+-->
+            </plugins>
+        </pluginManagement>
+    </build>
+<!--
    <build>
       <plugins>
          <plugin>
@@ -32,8 +275,6 @@
             <version>2.8</version>
             <configuration>
                <downloadSources>true</downloadSources>
-               <!--downloadJavadocs>true</downloadJavadocs-->
-               <!--useProjectReferences>false</useProjectReferences-->
             </configuration>
          </plugin>
             <plugin>
@@ -72,20 +313,55 @@
             </plugin>
       </plugins>
    </build>
+-->
 
-   <properties>
-      <slf4j.version>1.6.1</slf4j.version>
-      <tomcat.version>7.0.21</tomcat.version>
-      <junit.version>4.8.2</junit.version>
-      <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
-      <cxf.version>2.5.3</cxf.version>
-      <wss4j.version>1.6.5</wss4j.version>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <jdk.version>1.6</jdk.version>
-   </properties>
 
-   <dependencies>
-   </dependencies>
+   <profiles>
+        <profile>
+            <id>setup.eclipse</id>
+            <properties>
+                <eclipse.workspace.dir>${basedir}/../workspace</eclipse.workspace.dir>
+            </properties>
+            <build>
+                <defaultGoal>process-test-sources</defaultGoal>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>2.3.2</version>
+                            <configuration>
+                                <source>${jdk.version}</source>
+                                <target>${jdk.version}</target>
+                                <maxmem>256M</maxmem>
+                                <fork>${compiler.fork}</fork>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-eclipse-plugin</artifactId>
+                        <inherited>false</inherited>
+                        <executions>
+                            <execution>
+                                <id>setup.eclipse.workspace</id>
+                                <phase>process-test-sources</phase>
+                                <goals>
+                                    <goal>configure-workspace</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <workspace>${eclipse.workspace.dir}</workspace>
+                            <workspaceCodeStylesURL>file:etc/eclipse/CXFCodeFormatter.xml</workspaceCodeStylesURL>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+   </profiles>
 
    <repositories>
        <repository>
