--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -3,7 +3,13 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
-   <groupId>org.apache.cxf.fediz</groupId>
+   <parent>
+       <groupId>org.apache.cxf.fediz</groupId>
+       <artifactId>fediz</artifactId>
+       <version>0.6-SNAPSHOT</version>
+       <relativePath>../pom.xml</relativePath>
+   </parent>
+   <groupId>org.apache.cxf.fediz.examples</groupId>
    <artifactId>examples</artifactId>
    <version>0.6-SNAPSHOT</version>
    <name>Apache Fediz examples</name>
