--- a/services/pom.xml
+++ b/services/pom.xml
@@ -3,6 +3,12 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
+   <parent>
+       <groupId>org.apache.cxf.fediz</groupId>
+       <artifactId>fediz</artifactId>
+       <version>0.6-SNAPSHOT</version>
+       <relativePath>../pom.xml</relativePath>
+   </parent>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>services</artifactId>
    <version>0.6-SNAPSHOT</version>
