pmd ruleset for eclipse plugin
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1332328 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,7 @@
                         <additionalConfig>
                             <file>
                                 <name>.checkstyle</name>
-                                <location>/cxf-eclipse-checkstyle${fediz.checkstyle.extension}</location>
+                                <location>/cxf-eclipse-checkstyle</location>
                             </file>
                             <file>
                                 <name>.pmd</name>
@@ -270,10 +270,17 @@
                             </file>
                             <file>
                                 <name>.ruleset</name>
-                                <location>/${fediz.pmd.eclipse.ruleset}</location>
+                                <location>/cxf-pmd-ruleset.xml</location>
                             </file>
                         </additionalConfig>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.cxf.build-utils</groupId>
+                            <artifactId>cxf-buildtools</artifactId>
+                            <version>${cxf.build-utils.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
 <!-- Comment out for now
                 <plugin>
