--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,6 @@
       <fediz.checkstyle.extension />
       <fediz.downloadSources>true</fediz.downloadSources>
 
-      <fediz.pmd.eclipse.ruleset>cxf-pmd-ruleset.xml</fediz.pmd.eclipse.ruleset>
-
       <fediz.resources.base.path />
    </properties>
 
@@ -113,7 +111,7 @@
                     <version>2.8</version>
                     <configuration>
                         <attach>true</attach>
-                        <source>1.5</source>
+                        <source>${jdk.version}</source>
                         <quiet>true</quiet>
                         <bottom>Apache Fediz</bottom>
                         <javadocVersion>1.5</javadocVersion>
@@ -138,8 +136,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <source>1.5</source>
-                        <target>1.5</target>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
                         <maxmem>256M</maxmem>
                         <fork>${cxf.compiler.fork}</fork>
                         <encoding>UTF-8</encoding>
@@ -316,6 +314,7 @@
                         </execution>
                     </executions>
                 </plugin>
+-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
@@ -333,7 +332,7 @@
                             <ruleset>${fediz.resources.base.path}cxf-pmd-custom.xml</ruleset>
                         </rulesets>
                         <sourceEncoding>UTF-8</sourceEncoding>
-                        <targetJdk>1.5</targetJdk>
+                        <targetJdk>${jdk.version}</targetJdk>
                         <linkXRef>false</linkXRef>
                         <includeTests>true</includeTests>
                         <verbose>true</verbose>
@@ -351,7 +350,6 @@
                         </execution>
                     </executions>
                 </plugin>
--->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -408,7 +406,6 @@
                 </plugin>
                 -->
 
-<!-- TODO
                 <plugin>
                   <groupId>org.apache.rat</groupId>
                   <artifactId>apache-rat-plugin</artifactId>
@@ -421,7 +418,7 @@
                           <exclude>.gitignore</exclude>
                           <exclude>velocity.log</exclude>
                           <exclude>**/target/**</exclude>
-                          <exclude>distribution/**</exclude>
+                          <!--<exclude>distribution/**</exclude>-->
                           <exclude>**/jaxb.index</exclude>
                           <exclude>**/META-INF/MANIFEST</exclude>
                           <exclude>**/src/test/**/*.txt</exclude>
@@ -431,6 +428,7 @@
                       </excludes>
                   </configuration>
                 </plugin>
+                <!-- TODO commented out for now
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
