--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
 
    <properties>
       <slf4j.version>1.6.1</slf4j.version>
+      <spring.version>3.0.7.RELEASE</spring.version>
       <tomcat.version>7.0.21</tomcat.version>
       <junit.version>4.8.2</junit.version>
       <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
-      <cxf.version>2.5.3</cxf.version>
+      <cxf.version>2.6.1-SNAPSHOT</cxf.version>
       <wss4j.version>1.6.5</wss4j.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <jdk.version>1.6</jdk.version>
