--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -36,6 +36,11 @@
 	</properties>
 
 	<dependencies>
+	    <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-web</artifactId>
+           <version>${spring.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http</artifactId>
