[FEDIZ-10] improved federation configuration
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1338661 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/pom.xml
+++ b/examples/wsclientWebapp/pom.xml
@@ -24,11 +24,11 @@
    <parent>
        <groupId>org.apache.cxf.fediz.examples</groupId>
        <artifactId>examples</artifactId>
-       <version>0.6-SNAPSHOT</version>
+       <version>1.0-SNAPSHOT</version>
    </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>wsclientWebapp</artifactId>
-    <name>Apache Fediz Webapp WebService Client</name>
+    <name>Apache Fediz Examples - Webapp WS Client</name>
    <packaging>pom</packaging>
 
    <modules>
