--- a/examples/simpleWebapp/pom.xml
+++ b/examples/simpleWebapp/pom.xml
@@ -24,12 +24,12 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>0.6-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.apache.cxf.fediz.examples</groupId>
 	<artifactId>simpleWebapp</artifactId>
-	<name>Apache Fediz Webapp simple</name>
+	<name>Apache Fediz Examples - Webapp Simple</name>
 	<packaging>war</packaging>
 
 	<properties>
@@ -54,13 +54,13 @@
         <dependency>
                 <groupId>org.apache.cxf.fediz</groupId>
                 <artifactId>fediz-core</artifactId>
-                <version>0.6-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <scope>provided</scope>
         </dependency>
         <dependency>
                 <groupId>org.apache.cxf.fediz</groupId>
                 <artifactId>fediz-tomcat</artifactId>
-                <version>0.6-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <scope>provided</scope>
         </dependency>
         <dependency>
