--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -24,10 +24,10 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz.examples</groupId>
 		<artifactId>wsclientWebapp</artifactId>
-		<version>0.6-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>webapp</artifactId>
-	<name>Apache Fediz webservice Client Webapp</name>
+	<name>Apache Fediz Examples - Webapp WS Client - Webapp</name>
 	<packaging>war</packaging>
 
 	<properties>
@@ -55,13 +55,13 @@
 		<dependency>
 			<groupId>org.apache.cxf.fediz</groupId>
 			<artifactId>fediz-core</artifactId>
-			<version>0.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf.fediz</groupId>
 			<artifactId>fediz-tomcat</artifactId>
-			<version>0.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
