--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -24,12 +24,11 @@
     <parent>
        <groupId>org.apache.cxf.fediz.examples</groupId>
        <artifactId>webservice</artifactId>
-       <version>0.6-SNAPSHOT</version>
+       <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.webservice</groupId>
     <artifactId>service-common</artifactId>
-    <name>Apache Fediz Web Service common</name>
-    <version>0.6-SNAPSHOT</version>
+    <name>Apache Fediz Examples - Webapp WS Client - Web Service Common</name>
     <packaging>jar</packaging>
 
     <dependencies>
