--- a/examples/wsclientWebapp/webservice/pom.xml
+++ b/examples/wsclientWebapp/webservice/pom.xml
@@ -24,11 +24,10 @@
     <parent>
        <groupId>org.apache.cxf.fediz.examples</groupId>
        <artifactId>wsclientWebapp</artifactId>
-       <version>0.6-SNAPSHOT</version>
+       <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>webservice</artifactId>
-    <name>Apache Fediz wsclientwebapp - web service</name>
-    <version>0.6-SNAPSHOT</version>
+    <name>Apache Fediz Examples - Webapp WS Client - Web Service</name>
     <packaging>pom</packaging>
 
     <properties>
