--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>fediz</artifactId>
-		<version>0.6-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>fediz-core</artifactId>
@@ -64,8 +64,50 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
-    
+   <build>
+     <plugins>
+	    <plugin>
+	    <groupId>com.sun.tools.xjc.maven2</groupId>
+	    <artifactId>maven-jaxb-plugin</artifactId>
+	    <executions>
+                <execution>
+   	        <goals>
+                    <goal>generate</goal>
+	        </goals>
+ 	        </execution>
+	    </executions>
+	    <configuration>
+	        <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
+	        <generatePackage>org.apache.cxf.fediz.core.config.jaxb</generatePackage>
+	        <includeSchemas>
+                    <includeSchema>**/FedizConfig.xsd</includeSchema>
+	        </includeSchemas>
+	        <excludeSchemas>
+	             <excludeSchema>test*.xsd</excludeSchema>
+	        </excludeSchemas>
+	        <includeBindings>
+	            <includeBinding>*.xjb</includeBinding>
+	        </includeBindings>
+	        <strict>true</strict>
+	        <verbose>true</verbose>
+ 	    </configuration>
+	    </plugin>
+   		<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>    
 </project>
  
