--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,16 +24,16 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz</artifactId>
-       <version>0.6-SNAPSHOT</version>
+       <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>plugin</artifactId>
-   <version>0.6-SNAPSHOT</version>
    <name>Apache Fediz Plugin</name>
    <packaging>pom</packaging>
 
    <modules>
       <module>core</module>
       <module>tomcat</module>
+      <module>jetty</module>
    </modules>
 </project>
