--- a/plugins/tomcat/pom.xml
+++ b/plugins/tomcat/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>fediz</artifactId>
-		<version>0.6-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>fediz-tomcat</artifactId>
@@ -39,6 +39,8 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
 			<version>${tomcat.version}</version>
+			<!-- <artifactId>catalina</artifactId>
+			<version>6.0.35</version>-->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -50,7 +52,7 @@
 		<dependency>
 			<groupId>org.apache.cxf.fediz</groupId>
 			<artifactId>fediz-core</artifactId>
-			<version>0.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
