--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>fediz</artifactId>
-   <version>0.6-SNAPSHOT</version>
+   <version>1.0-SNAPSHOT</version>
    <name>Apache Fediz</name>
    <packaging>pom</packaging>
 
@@ -31,6 +31,7 @@
       <slf4j.version>1.6.1</slf4j.version>
       <spring.version>3.0.7.RELEASE</spring.version>
       <tomcat.version>7.0.21</tomcat.version>
+      <jetty.version>8.1.3.v20120416</jetty.version>
       <junit.version>4.8.2</junit.version>
       <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
       <cxf.version>2.6.1-SNAPSHOT</cxf.version>
@@ -268,18 +269,13 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.1.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
+                    <version>2.4</version>
                     <configuration>
                         <source>${jdk.version}</source>
                         <target>${jdk.version}</target>
@@ -389,6 +385,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-eclipse-plugin</artifactId>
+                    <version>2.9</version>
                     <configuration>
                         <outputDirectory>${fediz.eclipse.outputDirectory}</outputDirectory>
                         <buildcommands>
@@ -452,6 +449,7 @@
                                 <suppressionsLocation>${fediz.resources.base.path}cxf-checkstyle-suppressions.xml</suppressionsLocation>
                                 <sourceDirectory>${basedir}/src</sourceDirectory>
                                 <excludes>**/archetype-resources/**/*.java</excludes>
+                                <excludes>**/jaxb/**/*.java</excludes>
                             </configuration>
                             <goals>
                                 <goal>checkstyle</goal>
@@ -460,6 +458,11 @@
                     </executions>
                 </plugin>
 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.9.1</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
@@ -498,6 +501,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12</version>
                     <configuration>
                         <includes>
                             <include>**/*Test.java</include>
@@ -611,7 +615,7 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-compiler-plugin</artifactId>
-                            <version>2.3.2</version>
+                            <version>2.4</version>
                             <configuration>
                                 <source>${jdk.version}</source>
                                 <target>${jdk.version}</target>
@@ -699,6 +703,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.4</version>
                         <configuration>
                             <showDeprecation>${fediz.compile.show.deprecation}</showDeprecation>
                             <showWarnings>true</showWarnings>
@@ -734,6 +739,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.4</version>
                         <configuration>
                             <showDeprecation>true</showDeprecation>
                             <showWarnings>true</showWarnings>
