--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -34,6 +34,6 @@
    <modules>
       <module>core</module>
       <module>tomcat</module>
-      <module>jetty</module>
+      <!--<module>jetty</module>-->
    </modules>
 </project>
