Remove PMD plugin from plugins/tomcat as it's picked up from the root pom
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1339537 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -474,6 +474,7 @@
                         </rulesets>
                         <sourceEncoding>UTF-8</sourceEncoding>
                         <targetJdk>${jdk.version}</targetJdk>
+                        <failOnViolation>true</failOnViolation>
                         <linkXRef>false</linkXRef>
                         <includeTests>true</includeTests>
                         <verbose>true</verbose>
